<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_top"
        android:paddingBottom="@dimen/margin_bottom"
        android:background="@color/white"
        tools:context=".login.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVerticalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glVerticalRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glHorizontalTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glHorizontalBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginTitle"
            style="@style/LoginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintTop_toBottomOf="@id/ivIcon"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginSubTitle"
            style="@style/LoginSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/glHorizontalTop"
            app:layout_constraintStart_toEndOf="@id/glVerticalLeft"
            app:srcCompat="@drawable/icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserName"
            style="@style/FontRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            app:layout_constraintBottom_toTopOf="@+id/etUserName"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            style="@style/FontBold"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            app:layout_constraintBottom_toTopOf="@+id/tvPassword"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            style="@style/FontRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/FontBold"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/tvError"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            style="@style/TextError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/invalid_credential"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/GenericButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/glHorizontalBottom"
            app:layout_constraintEnd_toStartOf="@+id/glVerticalRight"
            app:layout_constraintStart_toEndOf="@+id/glVerticalLeft"
            app:layout_constraintWidth_max="@dimen/max_element_width" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>